--- a/Site/css/feedback.css
+++ b/Site/css/feedback.css
@@ -334,7 +334,8 @@ div.pedido {
   width: 1000px;
   height: 200px;
   border-radius: 20px;
-  
+  -webkit-box-shadow: 5px 10px 18px #888888;
+          box-shadow: 5px 10px 18px #888888;
 }
 
 div.pedido img.bolo {
@@ -417,14 +418,16 @@ div.englobar div.textao textarea.inputo {
   border-style: none;
   font-family: "Raleway", sans-serif;
   outline: none;
-  
+  -webkit-box-shadow: 5px 10px 18px #888888;
+          box-shadow: 5px 10px 18px #888888;
   padding: 20px;
 }
 
 div.englobar div.imgs img.haro {
   width: 218px;
   height: 170px;
-  
+  -webkit-box-shadow: 2px 7px 12px #888888;
+          box-shadow: 2px 7px 12px #888888;
   border-radius: 20px;
   margin-top: -60px;
 }
@@ -432,7 +435,8 @@ div.englobar div.imgs img.haro {
 div.englobar div.imgs img.raor {
   width: 218px;
   height: 170px;
-  
+  -webkit-box-shadow: 2px 7px 12px #888888;
+          box-shadow: 2px 7px 12px #888888;
   border-radius: 20px;
   margin-top: 20px;
 }
@@ -452,7 +456,8 @@ div.englobar div.imgs button.boto {
   height: 55px;
   background-color: #0BBAB3;
   color: white;
-  
+  -webkit-box-shadow: 2px 7px 12px #888888;
+          box-shadow: 2px 7px 12px #888888;
   border-radius: 20px;
   border-style: none;
   margin-left: -130px;
@@ -465,12 +470,12 @@ button.butao {
   margin-left: 380px;
   background-color: #0BBAB3;
   color: white;
-  
+  -webkit-box-shadow: 5px 10px 18px #888888;
+          box-shadow: 5px 10px 18px #888888;
   border-radius: 25px;
   border-style: none;
   font-family: "Raleway", sans-serif;
   font-size: 20px;
   font-weight: bold;
 }
-
 /*# sourceMappingURL=feedback.css.map */
