--- a/Site/css/personalizado.css
+++ b/Site/css/personalizado.css
@@ -365,6 +365,8 @@ h2 {
 }
 
 div.botoes {
+  -ms-flex-item-align: center;
+      align-self: center;
   margin-top: 40px;
   display: -webkit-box;
   display: -ms-flexbox;
