--- a/Site/css/pesquisa.css
+++ b/Site/css/pesquisa.css
@@ -35,7 +35,6 @@ header {
 
 nav {
   margin: 0;
-  margin-top: 10px;
 }
 
 nav a {
@@ -327,6 +326,7 @@ div.produtos {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  flex-wrap: wrap;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
@@ -347,6 +347,7 @@ div.produto {
   background-color: white;
   border-radius: 10px;
   height: 240px;
+  
 }
 
 div.produto h4 {
